# transparent_cmake_examples

./: LICENSE  README.md
classic_approach/: CMakeLists.txt  conanfile.txt  main.cpp
cmake_find_package/: CMakeLists.txt  conanfile.txt  main.cpp
cmake_paths/: CMakeLists.txt
cmake_paths_attempt2/: CMakeLists.txt  conanfile.txt
cmake_paths_attempt3_windows/: CMakeLists.txt  conanfile.txt  main.cpp
